<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Walk Detector</string>
    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="action_stop_detector">Stop the detector</string>
    <string name="action_start_detector">Start the detector</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="walking_detected">Walking detected</string>
    <string name="should_track_status">should_track_status</string>
    <string name="preference_file_key">WalkDetectorApp6372</string>
    <string name="greeting_home">Use the menu to start or stop the Walking Detector :)</string>
    <string name="checked_period_in_seconds">Checked period in seconds</string>
    <string name="update">Update</string>
    <string name="path_stop">M 6.0,6.0 h 12.0 v 12.0 l 0.0,0.0 H 6.0 L 6.0,6.0</string>
    <string name="path_play">M 8.0,5.0 h 0.0 v 14.0 l 11.0,-7.0 H 19.0 L 8.0,5.0</string>
    <string name="error_parsing_check_period">Error while parsing check period</string>
    <string name="error_check_period_not_recommended">We recommended period between 60 and 600 seconds</string>
    <string name="check_period_key">check_period_key</string>
    <string name="check_period_updated">Check period updated</string>
    <string name="all_day">All day</string>
    <string name="start_time">Auto start time</string>
    <string name="end_time">Auto end time</string>
    <string name="set_auto_turn_on_and_off">Set auto switch</string>
    <string name="alarm_start_time_key">alarm_start_time_key</string>
    <string name="alarm_end_time_key">alarm_end_time_key</string>
    <string name="error_entered_invalid_time">The times are invalid. The format is 23:59</string>
</resources>
